WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240097
[JSC] Temporal.Instant since/until should not accept year / month / day / week units
https://bugs.webkit.org/show_bug.cgi?id=240097
Summary
[JSC] Temporal.Instant since/until should not accept year / month / day / wee...
Yusuke Suzuki
Reported
2022-05-04 16:51:32 PDT
[JSC] Temporal.Instant since/until should not accept year / month / day / week units
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-05-04 16:55:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/513
EWS
Comment 2
2022-05-04 17:51:56 PDT
Committed
r293808
(
250281@main
): <
https://commits.webkit.org/250281@main
> Reviewed commits have been landed. Closing PR #513 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-04 17:52:13 PDT
<
rdar://problem/92764869
>
Ross Kirsling
Comment 4
2022-05-05 16:09:16 PDT
***
Bug 240017
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug